// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute http endpoint should return success 1`] = `
{
  "data": {
    "result": "123000",
  },
  "result": "123000",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute multi-http endpoint should return error when data path is not found 1`] = `
{
  "errorMessage": "Data path 'non_existent_field' not found in response for 'MISSING_PATH'",
  "statusCode": 500,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute multi-http endpoint should return error when ripcord is activated 1`] = `
{
  "errorMessage": "Ripcord activated for 'RIPCORD'",
  "statusCode": 503,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute multi-http endpoint should return success with multiple values 1`] = `
{
  "data": {
    "aum": 30127047.47,
    "nav": 1.0043732667449965,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1768805782194,
  },
}
`;
